# evilflowers-books-digitalizer

./: .dockerignore  .gitignore  Dockerfile  README.md  credentials.example.toml  pyproject.toml  zensical.toml
configs/: catalog.xlsx  pipeline.cache.toml  pipeline.local.toml  pipeline.toml  pipeline.vm.toml
deploy/: .env.example  README.md  docker-compose.prefect.yml  docker-compose.yml  evilflowers-digitalizer.service  prefect.yaml
docs/: architecture.md  catalog_import.md  deployment.md  digitalization_pipeline_report.md  index.md  metadata_and_covers.md  operations.md  testing.md
evilflowers_books_digitalizer/: __init__.py  __main__.py  batch.py  cache.py  cli.py  config.py  dashboard.py  exports.py  imaging.py  language.py  models.py  monitor.py  progress.py  reporting.py  runner.py  runtime.py  webdav.py
notebooks/: 01_explore_corpus.ipynb  01_webdav_exploration.ipynb  02_clean_pages_lab.ipynb  02_single_book_pipeline.ipynb  03_dual_output_lab.ipynb  04_produce_samples.ipynb  04_single_book_e2e.ipynb  05_batch_pipeline.ipynb  06_metadata_and_covers.ipynb  06_scantailor_mrc_lab.ipynb  07_stats_and_results.ipynb  08_perfect_quality_lab.ipynb  09_finalizer_pero_pilot.ipynb  10_metadata_catalog_draft.ipynb  11_local_e2e_experiment.ipynb  12_stats_and_results.ipynb
tests/: test_catalog_client.py  test_catalog_manifest.py  test_catalog_mapping.py  test_catalog_publisher.py  test_cover_source.py  test_covers.py  test_draft.py  test_exports.py  test_factory.py  test_finalize_bookmarks.py  test_isbn_lookup.py  test_layout.py  test_metadata.py  test_pdfa.py  test_profiles.py  test_progress.py  test_reporting.py  (+2 more)
(+52 files in other folders)
