[project]
name = "evilflowers-books-digitalizer"
version = "0.1.0"
description = "Digitalization pipeline for scanned books: WebDAV TIFF scans -> searchable PDF/A, with enrichment and classification stages"
authors = [{ name = "Jakub Dubec", email = "jdubec@culturepulse.ai" }]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "webdav4 (>=0.10,<1.0)",
    "ocrmypdf (>=17.0,<18.0)",
    "img2pdf (>=0.6,<1.0)",
    "pikepdf (>=10.0,<11.0)",
    "pillow (>=11.0,<12.0)",
    "pydantic (>=2.0,<3.0)",
    "tqdm (>=4.66,<5.0)",
    "opencv-python-headless (>=4.10,<5.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "archive-pdf-tools (>=1.5,<2)",
    "pandas (>=2.2,<3.0)",
    "openpyxl (>=3.1,<4.0)",
    "rich (>=13,<15)",
]

[project.optional-dependencies]

[project.scripts]
evilflowers-digitalizer = "evilflowers_books_digitalizer.cli:main"

[tool.poetry]
packages = [{ include = "evilflowers_books_digitalizer" }]
include = [
    { path = "evilflowers_books_digitalizer/covers/assets/fonts/*.ttf", format = ["sdist", "wheel"] },
]

[tool.poetry.group.notebooks.dependencies]
jupyterlab = "^4.0"
matplotlib = "^3.9"
plotly = "^6.8.0"
ipywidgets = "^8.1.8"
pypdfium2 = "^5.9.0"
doxapy = "^0.9.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
mypy = "^1.14"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
